--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,7 @@
     <string name="input_title">Input Url:</string>
     <string name="back_title">BACK</string>
     <string name="change_title">Change</string>
-    <string name="buffering">Buffering</string>
+    <string name="buffering">加载中...</string>
     <string name="title_activity_audio_player">AudioPlayerActivity</string>
     <string name="choose_video">Video</string>
     <string name="choose_audio">Audio</string>
