1、房间页面滑动切换1 2 3麦，显示当前麦主播名称，没有主播则显示“当前麦没有主播 2、支付宝充值页面重新制作

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,5 @@
     <string name="cd_preview_mirror">cd_preview_mirror</string>
 
     <string name="cd_encoding_mirror">cd_encoding_mirror</string>
+    <string name="this_mic_no_anchor">当前麦没有主播</string>
 </resources>
